<resources>
    <string name="app_name">Vaperoid</string>
    <string name="login_title">Log into your account</string>
    <string name="login_prompt">Enter your login</string>
    <string name="login_button">Log in</string>
    <string name="password_prompt">Enter your password</string>
    <string name="menu">Menu</string>
    <string name="search">Search</string>
    <string name="register_submit_button">Sign up</string>
    <string name="register_title">Registration</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_button_exit">Exit</string>
    <string name="dashboard_button_profile">Profile</string>
    <string name="violated_constraints_message">Some values are not appropriate</string>
    <string name="shared_pref_file">com.dimwits.vaperoid</string>
    <string name="password_repeat_prompt">Repeat password</string>
    <string name="exit">Exit</string>
    <string name="about_prompt">About yourself</string>
    <string name="last_name_prompt">Last name</string>
    <string name="first_name_prompt">First name</string>
    <string name="email_prompt">email</string>
    <string name="register_upload_button">Upload image</string>
    <string name="profile">Profile</string>
    <string name="user_picture">User picture</string>
    <string name="find_people">Find people</string>
    <string name="enter_username">Enter username</string>
    <string name="wait_for_request_to_finish">Wait please, request is being processed…</string>
    <string name="passwords_do_not_match">Passwords don\'t match</string>
    <string name="wrong_credentials">Wrong credentials</string>
    <string name="connection_error">Something is wrong with the connection</string>
</resources>
