<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal" >
    <TextView
        android:text="@string/menu"
        android:textSize="@dimen/h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/menu_profile_button"
        android:text="@string/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/menu_search_button"
        android:text="@string/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/menu_exit"
        android:text="@string/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>