<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:text="@string/dashboard_title"
        android:textSize="@dimen/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/dashboard_profile"
        android:text="@string/dashboard_button_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/dashboard_exit"
        android:text="@string/dashboard_button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>