<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_people"
        android:textSize="@dimen/h1" />
    <EditText
        android:id="@+id/search_username"
        android:hint="@string/enter_username"
        android:textSize="@dimen/h2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions" />
    <Button
        android:id="@+id/search_button"
        android:text="@string/search"
        android:textSize="@dimen/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>